# starlette-tailwindcss

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: release.yml
.zed/: settings.json
examples/: __init__.py
examples/use_auto_install/: __init__.py  app.py
examples/use_bin_path/: app.py
examples/use_bin_path/templates/: index.html
examples/use_build_id/: __init__.py  app.py  globals.css
examples/use_build_id/templates/: index.html
examples/use_hot_reload/: __init__.py  app.py
examples/use_hot_reload/static/css/: .gitignore
examples/use_hot_reload/templates/: index.html
src/starlette_tailwindcss/: __init__.py  installer.py  tailwindcss.py
tests/: __init__.py  auto_install_logging_test.py  auto_install_test.py  binary_not_found_test.py  build_test.py  conftest.py  hot_reload_shutdown_test.py
