[project]
name = "starlette-tailwindcss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pyk", email = "2213646+pyk@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
